Add contents to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       <div class="text-box">
         <h1 class="heading-primary">
           <span class="heading-primary-main">Frontend<br />engneer</span>
-          <span class="heading-primary-sub">Takuya Yoshida</span>
+          <span class="heading-primary-sub">Takuya</span>
         </h1>
+        <a href="#" class="btn btn-white">Discover our tours</a>
       </div>
     </header>
   </body>
