--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
 
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
@@ -13,19 +16,19 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
-    <title>Natours | Exciting tours for adventurous people</title>
+    <title>Takuya</title>
   </head>
   <body>
     <header class="header">
-      <div class="logo-box">
-        <img class="logo" src="img/logo-white.png" alt="Logo" />
+      <div class="header__logo-box">
+        <img class="header__logo" src="img/logo-white.png" alt="Logo" />
       </div>
-      <div class="text-box">
+      <div class="header__text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary-main">Frontend<br />engneer</span>
-          <span class="heading-primary-sub">Takuya</span>
+          <span class="heading-primary--main">Frontend<br />engneer</span>
+          <span class="heading-primary--sub">Takuya</span>
         </h1>
-        <a href="#" class="btn btn-white">Discover our tours</a>
+        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
   </body>
